# UR_ws

./: .gitignore  .gitmodules  README.md
src/emg_presentation/: CMakeLists.txt  package.xml
src/emg_presentation/launch/: elbow_only.launch
src/emg_presentation/src/: elbow_only.cpp
src/mcc_daq/: CMakeLists.txt  package.xml
src/mcc_daq/launch/: usb1608g.launch
src/mcc_daq/src/: start_usb1608g.cpp  usb1608g.cpp
src/misc/: CMakeLists.txt  package.xml
src/misc/src/: install_mcc_daq_deps.sh  ursim.sh
